fix jumping chat

--- a/src/scss/page/main/chat.scss
+++ b/src/scss/page/main/chat.scss
@@ -7,3 +7,7 @@
 		.elements { width: calc(100% - 32px); margin-left: 0px; left: 16px; }
 	}
 }
+
+html.bodyMainChat {
+	body { overflow-y: scroll; }
+}
